<resources>
    <string name="app_name">EcoWise</string>
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_iniciar_sesion"> Iniciar Sesión </string>
    <string name="login_registrarse"> Registrarse </string>
    <string name="huella_dactilar"> Autenticación biométrica </string>
    <string name="vision_general"> Visión general </string>
    <string name="add_gasto"> Nuevo gasto </string>
    <string name="add_ingreso"> Nuevo ingreso </string>
    <string name="web_client_id"> 909588111421-nu4mr635p846fnn5fi5graaef2o9l7eg.apps.googleusercontent.com </string>
    <string name="asset_statements"> </string>
    <string name="boton_volver"> Volver </string>
    <string name="msg_token_fmt">%s</string>
    <string-array name="temaApp_opciones">
        <item>Claro</item>
        <item>Oscuro</item>
        <item>Sistema</item>
    </string-array>
    <string name="activity_pantalla_bienvenida">PantallaBienvenidaActivity</string>
    <string name="configurar_recordatorio">Configurar recordatorio</string>

</resources>